src/test/contracts/negative/regression_typecheking_recursive_function.mligo

let rec toto : unit -> int = fun () -> ()
